Re-fixed scrollables (sigh) -- previously, if the size was too small (e.g. 2 polls), then it stayed that size even if contents got bigger (e.g. poll clicked) Fixed scrollable heights inline Hopefully a fix for #1093 (image polls etc.) Some rewards center style updates

--- a/public/browserapp/css/src/generic.less
+++ b/public/browserapp/css/src/generic.less
@@ -61,7 +61,6 @@
 
 	.sayso-scrollable {
 		overflow: auto;
-		min-height: 100px;
 	}
 
 	.sayso-iframe {
@@ -1003,8 +1002,8 @@
       #sayso-section {
         left: auto;
         right: 0;
-        width: 510px;
-        height: 438px;
+        width: 520px;
+        height: 500px;
         background-color: @theme-color-section-border;
 
         #sayso-section-header {
@@ -1018,9 +1017,8 @@
         }
         #sayso-section-body {
           background-color: @theme-color-section-background;
-          height: 338px;
 //          width: 100%;
-          padding: 20px 0 0 0;
+          //padding: 20px 0 0 0;
 
             .sayso-reward-item {
                 width: auto;
@@ -1028,10 +1026,14 @@
                 float: left;
                 border: 1px solid #ababab;
                 background-color: @theme-color-section-border;
-                margin: 0px 0px 20px 10px;
+                margin: 0 10px 20px 0;
                 cursor: pointer;
                 position: relative;
                 z-index: 1;
+
+				&:nth-child(3n) {
+					margin-right: 0;
+				}
 
                 .sayso-reward-item-disabled {
                     //Todo: make this generic overlay a mixin.
